creating template for creature list, and linking it to app module

--- a/fantasy-creatures/src/app/app.component.html
+++ b/fantasy-creatures/src/app/app.component.html
@@ -3,21 +3,6 @@
         <span class="navbar-brand mb-0 h1">{{title}}</span>
     </div>
 </nav>
-<div class = "card">
-    <div class= "card-header">
-        <table class='table'>
-            <thead>
-              <tr>
-               
-                <th>Creature</th>
-                <th>Image</th>
-                
-              </tr>
-            </thead>
-        </table>
-    </div>
-
-   
-</div>
+<pm-creatures></pm-creatures>
 
 <router-outlet></router-outlet>
