trying to get routes working

--- a/fantasy-creatures/src/app/Creature/creature-details.component.html
+++ b/fantasy-creatures/src/app/Creature/creature-details.component.html
@@ -1,4 +1,4 @@
 <h1>
-    <creature-details>Creature details</creature-details>
+    <creature-details>{{pageTitle}}</creature-details>
 </h1>
 <router-outlet></router-outlet>
